@@ -1,2 +1,2 @@
 I:  1: Locally disabling W0404
-
+I:  1: Useless suppression of W0404
