@@ -1,0 +1,2 @@
+I:  7: Locally disabling W0612
+I:  8: Suppressed W0612 (from line 7)
